syntax = "proto3";

package heimdall.types;

import "gogoproto/gogo.proto";

option go_package = "github.com/maticnetwork/heimdall/types";

option (gogoproto.sizer_all)       = false;
option (gogoproto.marshaler_all)   = false;
option (gogoproto.unmarshaler_all) = false;

message Checkpoint {
    option (gogoproto.goproto_getters)  = false;
    option (gogoproto.goproto_stringer) = false;

    string proposer    = 1;
    uint64 start_block = 2;
    uint64 end_block   = 3;
    string root_hash   = 4;
    string borChainID  = 5;
    uint64 time_stamp  = 6;
}
